--- a/harleyD.html
+++ b/harleyD.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hayley Davidson</title>
+    <title> Info Harley Davidson</title>
 </head>
 <body>
+    <h1>Harley  Davidson</h1>
+
+    <h2>Información General:</h2>
+
+    <p>Harley Davidson es una empresa estadounidense que fabrica y vende motocicletas personalizadas.
+    Fue fundada en 1903 y actualmente es una de las principales empresas de motocicletas del mundo.<br>
+    Harley Davidson ha creado todo un estilo de vida y cultura en torno a ellas.
+    Desde simplemente un estilo de vestimenta hasta  un sinfin de  eventos, clubes de carreras, 
+    de viajes, de personalización y exhibiciones.<br>
+    Sus motocicletas tienen un estilo muy particular conocido como Chopper que  ha mantenido a lo 
+    largo de los años y en la mayoría de sus modelos.
+    </p>
+
     
 </body>
-</html>
+</html> 
