"Estructura básica completa H.D."

--- a/harleyD.html
+++ b/harleyD.html
@@ -19,6 +19,47 @@
     largo de los años y en la mayoría de sus modelos.
     </p>
 
+    <h2>Categorías principales:</h2>
+
+    <ul>
+        <li>Harley Davidson Street: Para ambientes urbanos</li>
+        <li>Sportster: Para competencias y largas carreteras</li>
+        <li>Softail: Enfocadas en la personalización tanto moderna como tradicional</li>
+        <li>Touring: Para viajes largos</li>
+        <li>Trike: Fabricadas con 3 ruedas</li>
+        <li>CVO: Motocicletas de edición limitada con gran personalización para viajes </li>
+    </ul>
+
+    <h2>Mejores Motocicletas:</h2>
+
+    <p>Algunas de las mejores motocicletas según la misma comunidad de Harley</p>
+
+<table border="1">
+
+    <tr>
+        <td>2019 Harley-Davidson Fat Bob</td>
+        <td><img src="images/19-softail-fat-bob-hero.jpg" alt="" style="width:300px; height:200px ;"></td>
+    </tr>
+    <tr>
+        <td>2019 Harley-Davidson Fat Boy</td>
+        <td><img src="images/Harley-Davidson-Fat-Boy-2019-1.jpg" alt="" style="width:300px; height:200px ;"></td>
+    </tr>
+    <tr>
+        <td>2019 Harley-Davidson Softail Slim</td>
+        <td><img src="images/softail_slim.jpg" alt="" style="width:300px; height:200px ;"></td>
+    </tr>
+    <tr>
+        <td>2019 Harley-Davidson road king special</td>
+        <td><img src="images/road_king_special.jpg" alt="" style="width:300px; height:200px ;"></td>
+    </tr>
+    <tr>
+        <td>2019 Harley-Davidson Heritage Classic</td>
+        <td><img src="images/heritage_classic.jpg" alt="" style="width:300px; height:200px ;"></td>
+    </tr>
+
+</table>
+
+<a href="https://www.harley-davidson.com/la/es/index.html">Pagina Oficial Harley Davidson</a>
     
 </body>
 </html> 
