--- a/harleyD.html
+++ b/harleyD.html
@@ -6,7 +6,13 @@
     <title> Info Harley Davidson</title>
 </head>
 <body>
-    <h1>Harley  Davidson</h1>
+
+    <header>
+        <h1>Harley  Davidson</h1>
+        <img src="images/harleylogo.jpg" alt="" width="120"; height="90">
+    </header>
+
+    
 
     <h2>Información General:</h2>
 
