--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Lamborghini</a>
+          <a class="nav-item nav-link" href="lamborghini.html">Lamborghini</a>
           <a class="nav-item nav-link" href="MercedesBenz.html">Mercedez Benz</a>
           <a class="nav-item nav-link" href="harleyD.html">Harley Davidson</a>
         </div>
@@ -55,7 +55,7 @@
       <div class="card-img-overlay">
         <h5 class="card-title">Lamborghini</h5>
         <p class="card-text">Automóviles deportivos hechos para gente extravangante y con ganas de sentir el asfalto de una manera diferente.</p>
-        <a class="btn btn-primary btn-mg" href="#">Conocer más</a>
+        <a class="btn btn-primary btn-mg" href="lamborghini.html">Conocer más</a>
       </div>
     </div>
     
