--- a/lamborghini.html
+++ b/lamborghini.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Lamborghini</a>
+          <a class="nav-item nav-link" href="lamborghini.html">Lamborghini</a>
           <a class="nav-item nav-link" href="MercedesBenz.html">Mercedez Benz</a>
           <a class="nav-item nav-link" href="harleyD.html">Harley Davidson</a>
         </div>
