"imagen de harley de index mejorada"

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     
     <div class="card">
-      <img src="images/index/harley.jpg" class="card-img" alt="lamborghini">
+      <img src="images/harley_index.jpg" class="card-img" alt="Harley">
       <div class="card-img-overlay">
         <h5 class="card-title">Harley Davidson</h5>
         <p class="card-text">Para aquellos que quieren sentir en viento en la cara y disfrutan de largos paseos.</p>
