--- a/MercedesBenz.html
+++ b/MercedesBenz.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styleMercedes.css">
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="indexstyle.css">
-	<link rel="stylesheet" href="css/fixed.css">
     <link rel="shortcut icon" href="images/Mercedes Benz/logo2.jpg">
     <title>Mercedes Benz</title>
 
@@ -29,7 +27,7 @@
       </div>
     </nav>
     
-    <div class="container">
+    <div class="containerM">
         <img src="images/Mercedes Benz/logo.png" alt="Logo Mercedes Benz" srcset="" width="180" height="100">
         
         <div class="item">
@@ -38,15 +36,15 @@
     </div>
 
 
-    <div class="container2">
-        <img src="images/Mercedes Benz/GTR fondo.jpg" alt="Seguridad y Confort" srcset="" width="1409" height="600">
+    <div class="container2M">
+        <img src="images/Mercedes Benz/GTR fondo.jpg" alt="Seguridad y Confort" srcset="" width="1662" height="650">
         <div class="center-up">"Lo mejor o nada"</div>
         <div class="center"> Una estrella de tres puntas que significa lujo y poder es altamente reconocible en todas las carreteras del mundo. La marca Mercedes-Benz lleva 132 años
             brindando lo mejor en automóviles desde su sede en Stuttgart, tanto para la ciudad como para el circuito de F1. Con una historia tan larga,más larga que 
             la de cualquier otro fabricante, Mercedes-Benz es reconocida por sus vehículos de lujo, autobuses y camiones. </div>
     </div>
 
-    <div class="containerVideo">
+    <div class="containerVideoM">
         <video width="800" height="450" controls>
             <source src="images/Mercedes Benz/video.mp4" type="video/mp4">
           </video>
